--- a/index.html
+++ b/index.html
@@ -48,10 +48,11 @@
                 <div class="player-main">
                     <!-- start first three player  -->
                     <div class="player-list">
-                        <img src="images/ibrahimovic.png" alt="">
-                        <h2>Zlatan Ibrahimovic</h2>
-                        <p>Zlatan Ibrahimovic is a Swedish professional footballer who plays as a striker for Serie A
-                            club AC Milan and the Sweden national team</p>
+                        <img src="images\player-1.png" alt="">
+                        <h2>Neymar Jr</h2>
+                        <p>Lorem ipsum dolor sit amet,
+                            consectetur adipiscing elit. Lacus,
+                            fermentum amet faucibus sed id nisi lectus at.</p>
                     </div>
                     <div class="player-list">
                         <img src="images/messi.png" alt="">
@@ -60,18 +61,18 @@
                             attacking midfielder and captains the Argentina national team.</p>
                     </div>
                     <div class="player-list">
-                        <img src="images/lock-madrid.png" alt="">
-                        <h2>Luka Modric</h2>
-                        <p>Luka Modric is a Croatian professional footballer who plays as a midfielder for Spanish club
-                            Real Madrid and captains the Croatia national team</p>
+                        <img src="images/ronaldo.png" alt="">
+                        <h2>Cristiano Ronaldo</h2>
+                        <p>cristiano ronaldo is a portuguese professional footballer who plays as a forward for
+                            serie a club juventus and captains the portugal national team</p>
                     </div>
                     <!-- end first three player  -->
                     <!-- start sacond three player  -->
                     <div class="player-list">
-                        <img src="images/ronaldo.png" alt="">
-                        <h2>Cristiano Ronaldo</h2>
-                        <p>Cristiano Ronaldo is a Portuguese professional footballer who plays as a forward for Serie A
-                            club Juventus and captains the Portugal national team</p>
+                        <img src="images/dybala.png" alt="">
+                        <h2>Paulo Dybala</h2>
+                        <p>paulo exequiel dybala is an argentine professional footballer who
+                            plays as a forward for serie a club juventus and the argentina national team</p>
                     </div>
                     <div class="player-list">
                         <img src="images/ozil.png" alt="">
@@ -80,18 +81,18 @@
                             midfielder and finesse as a wide midfielder in his career</p>
                     </div>
                     <div class="player-list">
-                        <img src="images/player-7.png" alt="">
-                        <h2>Di Maria</h2>
+                        <img src="images\player-6.png" alt="">
+                        <h2>Mauro Icardi</h2>
                         <p>Marcelo Vieira da Silva Júnior, known as Marcelo, is a Brazilian professional footballer who
                             plays for and captains Spanish club Real Madrid</p>
                     </div>
                     <!-- end sacond three player  -->
                     <!-- start thard three player  -->
                     <div class="player-list">
-                        <img src="images/m.salah.png" alt="">
-                        <h2>Mohamed Salah</h2>
-                        <p>Mohamed Salah Hamed Mahrous Ghaly is an Egyptian professional footballer who plays as a
-                            forward for Premier League club Liverpool</p>
+                        <img src="images\player-7.png" alt="">
+                        <h2>Di Maria</h2>
+                        <p>Marcelo Vieira da Silva Júnior, known as Marcelo, is a Brazilian professional footballer who
+                            plays for and captains Spanish club Real Madrid</p>
                     </div>
                     <div class="player-list">
                         <img src="images/mbappy.png" alt="">
@@ -100,18 +101,24 @@
                             club Paris Saint-Germain and the France national team.</p>
                     </div>
                     <div class="player-list">
-                        <img src="images/dybala.png" alt="">
-                        <h2>Paulo Dybala</h2>
+                        <img src="images\m.salah.png" alt="">
+                        <h2>Mohamed Salah</h2>
                         <p>Paulo Exequiel Dybala is an Argentine professional footballer who plays as a forward for
                             Serie A club Juventus and the Argentina national team</p>
                     </div>
                     <!-- end thard three player  -->
                     <!-- start fourth three player  -->
                     <div class="player-list">
-                        <img src="images/rodinho.png" alt="">
-                        <h2>Ronaldinho</h2>
+                        <img src="images\kyne.png" alt="">
+                        <h2>Harry Kane</h2>
                         <p>Ronaldo de Assis Moreira, commonly known as Ronaldinho Gaúcho or simply Ronaldinho, is a
                             Brazilian former professional footballer.</p>
+                    </div>
+                    <div class="player-list">
+                        <img src="images\player-11.png" alt="">
+                        <h2>Kevin De Bruyne</h2>
+                        <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who
+                            plays as a forward for Ligue 1 club Paris Saint-Germain.</p>
                     </div>
                     <div class="player-list">
                         <img src="images/player-12.png" alt="">
@@ -119,12 +126,7 @@
                         <p>Philippe Coutinho Correia is a Brazilian professional footballer who plays as an attacking
                             midfielder or winger for Spanish club Barcelona.</p>
                     </div>
-                    <div class="player-list">
-                        <img src="images/player-1.png" alt="">
-                        <h2>Neymar Jr</h2>
-                        <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who
-                            plays as a forward for Ligue 1 club Paris Saint-Germain.</p>
-                    </div>
+
                     <!-- end fourth three player  -->
 
                 </div>
@@ -140,12 +142,12 @@
                 <div class="container fix">
                     <div class="toop-player">
                         <div class="player-detail">
-                            <h1>Best football player in the world 2021</h1>
+                            <h1>All Highlights Copa America 2021</h1>
                             <button><a href="https://en.wikipedia.org/wiki/Lionel_Messi" target="blank">Watch Details <i
                                         class="fas fa-arrow-right"></i></a></button>
                         </div>
                         <div class="player-image">
-                            <img src="images/messi.png" alt="">
+                            <img src="images\match.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -163,14 +165,17 @@
                         </div>
                         <div class="footer-all-item">
                             <ul>
-                                <li><a href=""><i class="fab fa-facebook"></i></a></li>
-                                <li><a href=""><i class="fab fa-github"></i></a></li>
-                                <li><a href=""><i class="fab fa-linkedin"></i></a></li>
-                                <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                                <li><a href="https://www.linkedin.com/in/ataul-islam-baa66a215/"><i
+                                            class="fab fa-linkedin"></i></a></li>
+                                <li><a href="https://www.instagram.com/md_ataul_islam/"><i
+                                            class="fab fa-instagram"></i></a></li>
+                                <li><a href="https://www.facebook.com/md.shubon.52"><i class="fab fa-facebook"></i></a>
+                                </li>
+                                <li><a href="https://github.com/ataul70"><i class="fab fa-github"></i></a></li>
                             </ul>
                         </div>
                         <div class="footer-all-item">
-                            <p>&copy;copyright talksports 2020</p>
+                            <p>&copy;copyright talksports 2021</p>
                         </div>
                     </div>
                 </div>
